--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5430/db
-spring.datasource.username=myUser
-spring.datasource.password=12Qwerty
+#spring.datasource.url=jdbc:postgresql://localhost:5430/db
+#spring.datasource.username=myUser
+#spring.datasource.password=12Qwerty
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.liquibase.change-log=classpath:liquibase/configuration.yml
+spring.datasource.url=jdbc:containers-us-west-103.railway.app:6589/railway
+spring.datasource.username=postgres
+spring.datasource.password=HEAofqrShpnon7Zek5m2
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:liquibase/configuration.yml
