--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.password=12Qwerty
 #spring.jpa.hibernate.ddl-auto=validate
 #spring.liquibase.change-log=classpath:liquibase/configuration.yml
-spring.datasource.url=jdbc:containers-us-west-103.railway.app:6589/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-103.railway.app:6589/railway
 spring.datasource.username=postgres
 spring.datasource.password=HEAofqrShpnon7Zek5m2
 spring.jpa.hibernate.ddl-auto=validate
